--- a/valstats/src/components/SearchBar.css
+++ b/valstats/src/components/SearchBar.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
 }
 
 .gridstuff {
